# uos-multichannel-compound-fault-dataset

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATUS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: dataset_survey.md
design/: README.md  hardware_inventory.md  legacy_document_review.md  pilot_validation_protocol.md  record_length_and_windowing_rationale_ko.md  rpm_selection_rationale_ko.md  sampling_and_record_length_rationale.md  sampling_and_record_length_rationale_ko.md  sensor_layout_candidate.md  uos_v2_candidate_contributions_ko.md
paper/: README.md  claim_drafts.md  outline.md
pilot/: README.md
pilot/2026-07-22_1400rpm_30204_ir_h/: README.md  analysis_config.yaml  evidence.md  pilot_validation_report_ko.md  raw_manifest.sha256
pilot/2026-07-22_1400rpm_30204_ir_h/results/: channel_summary.csv  common_band_comparison.csv  expected_frequencies.csv  position_summary.csv  (+5 more)
references/: doi_list.csv  papers.bib
scripts/: __init__.py  analyze_uos_pilot.py  build_comparison_table.py  check_dataset_cards.py
survey/: README.md  dataset_registry.csv  scope_and_criteria.md  source_intake_queue.md  taxonomy.md
survey/schema/: README.md
survey/synthesis/: claim_bank.md  comparison_master.csv  comparison_master.md  gap_analysis.md  implications_for_uos_v2.md
survey/templates/: dataset_card_template.md  evidence_template.md  facts_template.yaml  relevance_template.md  sources_template.yaml
tests/: test_comparison_table.py  test_dataset_cards.py  test_uos_pilot_analysis.py
(+82 files in other folders)
