[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uos-dataset-survey"
version = "0.1.0"
description = "Survey automation for UOS Dataset v2"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
