[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uos-dataset-survey"
version = "0.1.0"
description = "Survey automation for UOS Dataset v2"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.7",
  "npTDMS>=1.7",
  "numpy>=1.24",
  "scipy>=1.10",
]
test = ["pytest>=7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
